[package]
name = "linux-artifacts"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
regex = "1.4.2"
lazy_static = "1"
chrono = "0.4"
configparser = "3.0.2"
forensic-rs = {workspace = true}
frnsc-liveregistry-rs = {workspace = true}
log = {workspace = true}
log4rs = {workspace = true}
